# readyapis-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/readyapis/: __init__.py  _client.py  _errors.py  _types.py  _version.py  calendar.py  email.py  fx.py  geo.py  intel.py  meta.py  tax.py
tests/: test_smoke.py
