[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readyapis"
version = "0.1.0"
description = "Official Python SDK for Ready APIs — curated REST APIs and composite signals."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Ready APIs", email = "support@readyapis.com" }]
keywords = ["readyapis", "api", "sdk", "geo", "tax", "fx", "email", "calendar", "intel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24,<1.0"]

[project.urls]
Homepage = "https://readyapis.com"
Documentation = "https://readyapis.com/docs"
Repository = "https://github.com/ReadyAPIs-com/readyapis"
Issues = "https://github.com/ReadyAPIs-com/readyapis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/readyapis"]

[tool.hatch.build.targets.sdist]
include = [
    "src/readyapis",
    "README.md",
    "PUBLISHING.md",
    "pyproject.toml",
]
